First try at fixing scrollbar issue

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -1,3 +1,12 @@
+/* Measuring Scrollbar Width by David Walsh */
+.scrollbar-measure{
+    width: 100px;
+    height: 100px;
+    overflow:scroll;
+    position: absolute;
+    top: -9999px;
+}
+
 .active{
     color:$brand-color-dark !important;
     border-top: 5px solid $brand-color-dark;
